--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 * {
-  font-family: 'Inter', sans-serif;
+  font-family: "Inter", sans-serif;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -11,7 +11,7 @@ h2,
 h3,
 input,
 button {
-  font-family: 'Press Start 2P', system-ui;
+  font-family: "Press Start 2P", system-ui;
 }
 
 #root {
@@ -70,6 +70,7 @@ p {
   display: flex;
   flex-direction: column;
   gap: 14px;
+  
 }
 
 .todoItem {
@@ -79,6 +80,7 @@ p {
   padding: 14px;
   border-radius: 14px;
   background: white;
+  margin-bottom: 10px;
 }
 
 .todoItem p {
@@ -102,10 +104,7 @@ p {
   opacity: 0.7;
 }
 
-
-
 @media (min-width: 640px) {
-
   header button,
   header input {
     font-size: 1.2em;
